Wed May 28 18:39:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Initializing memory for QosHolder.

Wed May 28 17:39:38 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/UnregisterHandler.h:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:

          Remove friendship of DataWriterImpl to WriteDataContainer.

          Move body of unregister_instances() from DataWriterImpl to
          WriteDataContainer.  Provide callback for WriteDataContainer to
          invoke unregister_instance_i().

Wed May 28 13:51:42 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Fixed qos settings to prevent dropping messages.

Wed May 28 13:21:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:

          Fixed not equals check.

Wed May 28 13:01:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Messenger/publisher.cpp:

          Added history qos of KEEP_ALL to prevent samples being
          overwritten if sending not keeping up.

Tue May 27 21:17:10 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/idl/CPPTemplate.txt:

          Added reader_info_lock_ to DataWriterImpl to protect
          accesses to reader_info_ from different threads.

Tue May 27 20:18:50 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:

          Fixed fuzz errors.

Tue May 27 20:00:51 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
